--- a/src/Header.sass
+++ b/src/Header.sass
@@ -2,3 +2,8 @@ header
 	width: 100%
 	height: 100px
 	background-color: #6848a8
+
+header > .grid div
+	background-color: #ccc
+	height: 80px
+	border: 1px solid #6848a8
