add filters, views and date in news

--- a/src/post.scss
+++ b/src/post.scss
@@ -1,3 +1,21 @@
 .post {
   margin: 5px;
 }
+
+.post-text {
+  text-align: left;
+}
+
+.post-info {
+  padding: 5px 0;
+  font-size: 15px;
+}
+
+.review {
+  margin: 5px;
+  color: #aaa;
+}
+.date {
+  margin: 5px;
+  color: #aaa;
+}
