--- a/src/Header.sass
+++ b/src/Header.sass
@@ -2,6 +2,7 @@ header
 	width: 100%
 	height: 100px
 	background-color: #6848a8
+	margin-bottom: 20px
 
 header > .grid div
 	background-color: #ccc
